--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
+  "name": "ppt",
+  "version": "1.0.0",
   "private": true,
+  "description": "",
   "scripts": {
-    "build": "slidev build",
-    "dev": "slidev --open",
-    "export": "slidev export"
   },
-  "dependencies": {
-    "@slidev/cli": "^0.28.7",
-    "@slidev/theme-default": "*",
-    "@slidev/theme-seriph": "*"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/leijunluo/git-slidev.git"
   },
-  "name": "git"
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/leijunluo/git-slidev/issues"
+  },
+  "homepage": "https://github.com/leijunluo/git-slidev#readme"
 }
