--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "private": true,
   "version": "1.0.0",
   "description": "",
-  "scripts": {},
+  "scripts": {
+    "build": "pnpm -r run build"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/leijunluo/git-slidev.git"
