--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,5 @@
 {
-  "routes": [
-      { "src": "/deer/.*", "dest": "/packages/deer/dist/index.html" },
-      { "src": "/git/.*", "dest": "/packages/git/dist/index.html" },
-      { "src": "/.*", "dest": "/packages/git/dist/index.html" }
+  "rewrites": [
+    { "source": "/deer", "destination": "/packages/deer/dist/index.html" }
   ]
 }
