--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "build": "pnpm --filter deer run build"
+    "build": "rimraf dist && pnpm -r run build"
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,13 @@
   },
   "homepage": "https://github.com/leijunluo/git-slidev#readme",
   "dependencies": {
-    "@slidev/cli": "^0.28.7"
+    "@slidev/cli": "^0.28.7",
+    "@slidev/theme-default": "*",
+    "@slidev/theme-seriph": "^0.21.2",
+    "playwright-chromium": "^1.21.1",
+    "pnpm": "^7.5.0",
+    "rimraf": "^3.0.2",
+    "slidev-theme-penguin": "^1.4.1",
+    "vite-svg-loader": "^3.4.0"
   }
 }
